test/files/neg/t5361.scala
class A {
  val x : { val self = this } = new { self => }
}
