test/files/neg/t5361.check
t5361.scala:2: error: only declarations allowed here
  val x : { val self = this } = new { self => }
                ^
one error found
